@@ -21,11 +21,6 @@
  */
 
 #include "config.h"
-#ifndef HAVE_GLIB_2_6
-#ifdef HAVE_LIBGNOME
-#include <libgnome/libgnome.h>
-#endif
-#endif
 #include <ctype.h>
 #include <gtk/gtk.h>
 #include <string.h>
@@ -798,11 +793,9 @@ void game_is_over(G_GNUC_UNUSED Game * game)
 	log_message(MSG_INFO, _("The game is over.\n"));
 }
 
-#ifdef HAVE_GLIB_2_6
 static GOptionEntry commandline_entries[] = {
 	{NULL, '\0', 0, 0, NULL, NULL, NULL}
 };
-#endif
 
 int main(int argc, char *argv[])
 {
@@ -814,9 +807,7 @@ int main(int argc, char *argv[])
 	GtkUIManager *ui_manager;
 	GtkAccelGroup *accel_group;
 	GError *error = NULL;
-#ifdef HAVE_GLIB_2_6
 	GOptionContext *context;
-#endif
 
 	net_init();
 
@@ -840,7 +831,6 @@ int main(int argc, char *argv[])
 	bind_textdomain_codeset(PACKAGE, "UTF-8");
 #endif
 
-#ifdef HAVE_GLIB_2_6
 	/* Long description in the commandline for server-gtk: help */
 	context = g_option_context_new(_("- Host a game of Pioneers"));
 	g_option_context_add_main_entries(context, commandline_entries,
@@ -852,21 +842,6 @@ int main(int argc, char *argv[])
 		g_error_free(error);
 		return 1;
 	};
-#else				/* HAVE_GLIB_2_6 */
-#ifdef HAVE_LIBGNOME
-	/* @todo RC 2005-04-10 If the client does not need libgnomeui
-	 * anymore, perhaps the gnome_program_init call could be moved
-	 * to config-gnome.c, which would allow a GNOME-free application,
-	 * for architectures that don't have GNOME libraries.
-	 */
-	gnome_program_init("pioneers-server", VERSION,
-			   LIBGNOME_MODULE,
-			   argc, argv, GNOME_PARAM_POPT_TABLE, NULL, NULL);
-#endif				/* HAVE_LIBGNOME */
-
-	/* Initialize the widget set */
-	gtk_init(&argc, &argv);
-#endif				/* HAVE_GLIB_2_6 */
 
 	window = gtk_window_new(GTK_WINDOW_TOPLEVEL);
 	/* Name in the titlebar of the server */
@@ -924,8 +899,6 @@ int main(int argc, char *argv[])
 
 	config_finish();
 	net_finish();
-#ifdef HAVE_GLIB_2_6
 	g_option_context_free(context);
-#endif
 	return 0;
 }
